--- a/01_practice/smallForm.html
+++ b/01_practice/smallForm.html
@@ -5,7 +5,7 @@
 		<title>用户信息搜集界面</title>
 	</head>
 	<body>
-		<form action="www.mygoddess.icu">
+		<form action="http://www.mygoddess.icu">
 			用户名<input type="text" placeholder="请输入您的用户名"/><br/>
 			登录密码<input type="text" placeholder="6-20位字母、数字和符号"/><br/>
 			确认密码<input type="text" placeholder="再次输入您的登录密码"/><br/>
